former-apps/radio-autoplaylist-frontend/radio-autoplaylist-frontend-ext-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autoplaylist-ext
  labels:
    type: external
spec:
  tls:
    - hosts:
        - not-found-on-spotify.{hostname}
      secretName: autoplaylist.ing.cert
  rules:
    - host: not-found-on-spotify.{hostname}
      http:
        paths:
          - backend:
              service:
                name: radio-autoplaylist-frontend
                port:
                  number: 3000
            path: /
            pathType: Prefix
